--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>MarketPlace</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>MarketPlace</name>
-	<description>esercitazione-ospedale</description>
+	<description>progetto finale</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
