--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/prova
+spring.datasource.url=jdbc:mysql://database-classicmodels.cetsul63nyeq.eu-south-1.rds.amazonaws.com:3306/marketplace
 spring.datasource.username=root
-spring.datasource.password=adminadmin
+spring.datasource.password=Password01!
 
 spring.jpa.generate-ddl = true
 
